# BankFrenzy

./: .gitignore  CMakeLists.txt  README.md  main.cpp
BankFrenzy/: CMakeLists.txt  main.cpp
BankFrenzy/src/Engine/: diceManagement.h
BankFrenzy/src/Player/: Player.cpp  Player.h
BankFrenzy/src/Properties/: Property.cpp  Property.h
BankFrenzy/src/main/: bankfrenzy.cpp  bankfrenzy.h  bankfrenzy.ui  main.cpp
src/: dice_management.h
src/Engine/: dice_management.h
src/Player/: Player.cpp  Player.h
src/Properties/: Property.cpp  Property.h
